@@ -81,7 +81,10 @@ public:
     QString databaseFileName() const;
     QString backupFilePath() const;
     QString itemAbsolutePath(const QModelIndex &curIndex) const; // returns the absolute path to the database item (file or subfolder)
-    QString branchDbFilePath(const QModelIndex &subfolder) const;
+    QString getBranchFilePath(const QModelIndex &subfolder, bool existing = false) const;
+    // ^ existing = false: returns the predefined path to the branch database file, regardless of the file's existence
+    // true: returns the path to the existing branch's database file; empty str if missing
+
     bool isWorkDirRelative() const;
     bool isFilterApplied() const;
     bool contains(const FileStatuses flags, const QModelIndex &subfolder = QModelIndex()) const;
